app/assets/stylesheets/pages/texts.scss
.text-list {
  min-height: 30rem;

  .text-listing { width: calc(100% - 1rem); }

  @include media(500px) {
    .text-listing { width: calc(50% - 1rem); }
  }

  @include media($mw-m) {
    .text-listing { width: calc(25% - 1rem); }
  }

  .text-listing {
    margin-bottom: 1rem;
    display: inline-block;
    overflow: hidden;
    margin: 0.5rem;
    height: 240px;
    transition: transform 0.3s ease-in-out;

    &:hover {
      transform: translateY(-0.5rem);
    }

    .text-listing-content {
      display: inline-block;
      height: 220px;
      padding: 2rem;
      position: relative;
      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
                  0 0 40px rgba(0, 0, 0, 0.1) inset;
      background: white;
      border-radius: 0.5rem;
      border: #ccc 1px solid;
      width: 100%;

      &:hover {
        border-color: #81a9da;
        box-shadow: 0 0 40px rgba(129, 169, 218, 0.22) inset;
        transition: all 0.3s;
      }

      &:before, &:after {
      	content: "";
        position: absolute;
        z-index: -1;
        box-shadow: 0 0 20px rgba(0,0,0,0.8);
        top: 50%;
        bottom: 0;
        left: 10px;
        right: 10px;
        border-radius: 100px / 10px;
      }
      &:after {
      	right: 10px;
        left: auto;
        transform: skew(8deg) rotate(3deg);
      }

      .language, .count {
        position: absolute;
        bottom: 1rem;
        font-size: 1.4rem;
      }

      .language {
        left: 2rem;
      }

      .count {
        right: 2rem;
      }

      .category {
        max-height: 4.6rem;
        overflow: hidden;
        text-overflow: ellipsis;
        display: inline-block;
      }
    }

    h1 {
      font-size: 2rem;
      font-weight: 400;
      line-height: 2.3rem;
      margin: 0;
      max-height: calc(2.3rem * 4);
      overflow: hidden;
      text-overflow: ellipsis;
    }

    a {
      cursor: pointer;
      text-decoration: none;
    }
  }
}

.text {
  line-height: 2.5rem;

  h1 {
    color: $color-strawberry;
  }

  audio {
    width: 100%;
  }

  .videoWrapper {
    margin: auto;
    max-width: 500px;
    width: 100%;

    @include media($mw-m) {
      width: 80%;
    }
  }
  .video {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 25px;
    height: 0;
  }
  .video iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  img {
    display: block;
    margin: auto;
    max-width: 80%;

    &.border {
      border: 0.1rem solid $color-light-gray;
      box-shadow: 0 2px 5px  0 rgba(0, 0, 0, .16),
                  0 2px 10px 0 rgba(0, 0, 0, .12);
    }
  }

  blockquote {
    margin: 0;
    margin-left: 2rem;
    border-bottom: 0.1rem solid $color-strawberry;
    font-style: italic;
    font-style: italic;
    color: $color-strawberry;
  }

  .word {
    cursor: pointer;

    &.unknown {
      background-color: rgba(255, 235, 0, 0.36);
    }
  }
}

$filter-bar-color: $color-white;
$filter-bar-background: $color-skyblue;
$filter-bar-dropdown-background: darken($filter-bar-background, 1.5%);
.filter-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  background-color: $filter-bar-background;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
  color: $filter-bar-color;
  border-radius: 0.5rem;
  margin-bottom: 2rem;
  text-transform: uppercase;
  background-image: linear-gradient(transparent, rgba(0, 0, 0, .03) 30%,
                                  rgba(0, 0, 0, .05));
  border: 0.1rem solid $color-light-gray;

  .filter-element {
    padding: 1.5rem 2rem;
    display: inline-block;
    cursor: pointer;
    font-size: 1.6rem;
    position: relative;

    &.open .filter-dropdown {
      display: block;
    }

    .icon {
      font-size: 1rem;
      position: relative;
      top: -0.1rem;
    }

    > input {
      border-radius: 100rem;
      padding-left: 1.5rem;
      padding-right: 1.5rem;
    }
  }

  input[type="checkbox"] {
    display: none;

    & + span:before {
      width: 2rem;
      display: inline-block;
      content: ' ';
    }

    &:checked + span:before {
      font-family: Ionicons;
      content: "\f122";
    }
  }

  .filter-dropdown {
    background-color: $filter-bar-dropdown-background;
    border: 0.1rem solid $color-light-gray;
    border-top: 0;
    display: none;
    list-style-type: none;
    margin: 0;
    margin-left: -2rem;
    min-width: 14rem;
    padding: 0;
    position: absolute;
    top: 5.5rem;
    z-index: 1;

    li label {
      display: block;
      padding: 1rem 2rem;
      cursor: pointer;
      padding-right: 3rem;
    }
  }
}

